--- a/views/template/user/updateProfil.html.twig
+++ b/views/template/user/updateProfil.html.twig
@@ -33,7 +33,7 @@
 						<label for="firstName">Nouveaux mot de passe :</label>
 						<input type="password" class="form-control" id="password" name="password" placeholder="Entrer votre mot de passe" value="">
 					</div>
-					<button type="submit" class="btn btn-primary">modifier</button>
+					<button type="submit" class="btn btn-primary mt-2">modifier</button>
 				</form>
 
 			</div>
