--- a/views/template/event/listEvent.html.twig
+++ b/views/template/event/listEvent.html.twig
@@ -4,7 +4,7 @@
 
 						<section class="card col-6 mt-3 mb-3 bg-light container p-0">
 							<h2 class="card-title m-0 p-1">Actualité</h2>
-							<hr>
+							<hr class="mt-0">
 						{% for user in listUser %}
 							
 							{% for event in user.eventUser %}
