--- a/views/template/event/listEvent.html.twig
+++ b/views/template/event/listEvent.html.twig
@@ -30,7 +30,7 @@
 
 								<a href="/rejoindreEvenement/{{event._id}}/{{userEvent._id}}" class="btn btn-primary">Je participe</a>
 
-								<a href="" class="btn btn-light">En savoir plus</a>
+								<a href="/evenement/{{event._id}}" class="btn btn-light">En savoir plus</a>
 							</div>
 						</div>
 					</article>
