--- a/views/template/layout/_header.html.twig
+++ b/views/template/layout/_header.html.twig
@@ -20,12 +20,12 @@
 
 
 			<a href="/profil" class="col-3 d-flex align-items-center">
-				<img class="col-3 ms-3" src="../pictures/logo-weride.png" alt="logo_weride">
+				<img class="col-3 ms-3" src="http://localhost:8080/pictures/logo-weride.png" alt="logo_weride">
 			</a>
 
 			
 				<div class="col-6 d-flex justify-content-around align-items-center header">
-					<img class="col-2 p-1 rounded-circle" src="../pictures/ylies.jpg" alt="profil image">
+					<img class="col-2 p-1 rounded-circle" src="http://localhost:8080/pictures/ylies.jpg" alt="profil image">
 					
 					<div class="col-6 p-1 d-flex">
 
