--- a/views/template/user/profil.html.twig
+++ b/views/template/user/profil.html.twig
@@ -12,9 +12,8 @@
 			<hr class="m-0">
 			{% for moto in user.motoUser %}
 				<article class="row card-body text-center border border-muted rounded m-2">
-					<h6 class="card-title">{{moto.brand}}</h5>
-					<h6 class="card-subtitle mb-2 text-muted">{{moto.model}}
-						{{moto.cylinder}}</h5>
+					<h5 class="card-title">{{moto.brand}}</h5>
+					<h6 class="card-subtitle mb-2 text-muted">{{moto.model}}{{moto.cylinder}}</h6>
 					<button type="button" class="mt-1 mb-1 p-0   btn btn-light">
 						<a href="/supprimerMoto/{{moto._id}}" class="nav-link p-0" aria-current="page">Supprimer</a>
 					</button>
@@ -48,7 +47,7 @@
 									</div>
 								</div>
 								<h5 class="card-text">{{event.title}}</h5>
-								<p class="text-success m-0">Rider 7+</p>
+								<p class="text-success m-0">Rider {{event.riderJoin.length}}+</p>
 							</div>
 							<div class="col-6">
 								<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1456402.9825108857!2d3.921280050206282!3d44.524634635339055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x12c9bf4344da5333%3A0x40819a5fd970220!2sMarseille!3m2!1d43.296482!2d5.3697799999999996!4m5!1s0x47f4ea516ae88797%3A0x408ab2ae4bb21f0!2sLyon!3m2!1d45.764043!2d4.835659!5e0!3m2!1sfr!2sfr!4v1647353202440!5m2!1sfr!2sfr" width="100%" height="" style="border-radius:5;" allowfullscreen="" loading="lazy"></iframe>
