--- a/views/template/event/listEvent.html.twig
+++ b/views/template/event/listEvent.html.twig
@@ -11,14 +11,9 @@
 							<div class=" d-flex  align-items-center">
 								<img class="col-2 me-2" src="./pictures/logo-weride.png" alt="profil image">
 								<div>
-<<<<<<< HEAD
-									<h6 class="card-title">{{userEvent.name}} {{userEvent.pseudo}}</h5>
-									<p class="card-subtitle mb-2 text-muted">Kawazaki Versys 650</p>
-=======
 									<h6 class="card-title">{{userEvent.name}}
 										{{userEvent.pseudo}}</h5>
-									<p class="card-subtitle mb-2 text-muted">{% for moto in userEvent.motoUser %}{{moto.brand}} {{moto.model}} {{moto.cylinder}}{% endfor %}</p>
->>>>>>> 8a6892b4b0f9af086ab4caafa8832bfd9dbe2c0d
+									<p class="card-subtitle mb-2 text-muted">{{userEvent.motoUser[0].brand}} {{userEvent.motoUser[0].model}} {{userEvent.motoUser[0].cylinder}}</p>
 								</div>
 							</div>
 							<h5 class="card-text">{{event.title}}</h5>
