--- a/views/template/event/updateEvent.html.twig
+++ b/views/template/event/updateEvent.html.twig
@@ -3,7 +3,7 @@
 	<main>
 		<div class="container">
 			<div class="row ">
-				<form class="col-md-6 mx-auto mt-5 p-3 my-5 bg-light rounded" method="post" action="/modifierEvenement/{{event._id}}">
+				<form class="col-md-6 mx-auto mt-5 p-3 my-5 bg-light rounded" method="post" action="/modifierEvenement/{{event._id}}/{{user._id}}">
 					<h3 class="text-primary">Modifies ta sortie</h1>
 					<hr class="m-0">
 					{% for err in errors %}
