--- a/views/template/event/event.html.twig
+++ b/views/template/event/event.html.twig
@@ -11,13 +11,7 @@
 				<div>
 					<h6 class="card-title">{{userEvent.pseudo}}</h5>
 
-					<p class="card-subtitle mb-2 text-muted">
-						{% for moto in userEvent.motoUser %}
-							{{moto.brand}}
-							{{moto.model}}
-							{{moto.cylinder}}
-						{% endfor %}
-					</p>
+					<p class="card-subtitle mb-2 text-muted">{{userEvent.motoUser[0].brand}} {{userEvent.motoUser[0].model}} {{userEvent.motoUser[0].cylinder}}</p>
 				</div>
 			</div>
 			<div class="d-flex justify-content-between">
