--- a/views/template/authentification/registration.html.twig
+++ b/views/template/authentification/registration.html.twig
@@ -2,7 +2,7 @@
 {% block main %}
 	<main style="background: url('./pictures/bg.png');background-size: cover; background-repeat: no-repeat;">
 		<h1 class="text-center my-5">Bienvenue dans le monde des motards!</h1>
-			<form class="col-md-6 mx-auto p-3 my-5 bg-light rounded" method="post" action="inscription">
+			<form class="col-md-6 mx-auto p-3 my-5 bg-light rounded" enctype="multipart/form-data" method="post" action="inscription">
 				<h1 class="text-primary">Inscription</h1>
 			<hr class="m-0">
 				{% for err in errors %}
@@ -20,6 +20,10 @@
 				<div>
 					<label class="my-3" for="firstName">Pseudo</label>
 					<input type="text" class="form-control" id="pseudo" name="pseudo" placeholder="Entrer votre pseudo" value="{{user.pseudo}}">
+				</div>
+				<div>
+					<label class="my-3" for="image">Photo</label>
+					<input type="file" class="form-control" id="image" name="image">
 				</div>
 				<div>
 					<label class="my-3" for="firstName">Email</label>
