--- a/views/template/user/profil.html.twig
+++ b/views/template/user/profil.html.twig
@@ -9,7 +9,7 @@
 
 	{# section profil #}
 		<section class="card col-6 mt-3 container p-0 d-flex align-items-center">
-			<img class="col-2 p-1 rounded-circle" src="./images/userImages/{{user.id}}/{{user.image}}" class="card-img-top"/>
+			<img class="col-2 p-1 rounded-circle" src="./images/userImages/{{user.id}}/{{user.picture}}" class="card-img-top"/>
 			<h6 class="card-title">{{inspectedUser.pseudo}}</h5>
 			<p class="card-subtitle mb-2 text-muted">{{user.motoUser[0].brand}} {{user.motoUser[0].model}} {{user.motoUser[0].cylinder}}</p>
 			
