--- a/views/template/layout/_header.html.twig
+++ b/views/template/layout/_header.html.twig
@@ -20,7 +20,7 @@
 				<img class="col-3 ms-3" src="http://localhost:8080/pictures/logo-weride.png" alt="logo_weride">
 			</a>
 				<div class="col-6 d-flex justify-content-around align-items-center header">
-				<img class="col-2 p-1 rounded-circle" src="./images/userImages/{{user.id}}/{{user.image}}" class="card-img-top"/>
+				<img class="col-2 p-1 rounded-circle" src="./images/userImages/{{user.id}}/{{user.picture}}" class="card-img-top"/>
 					<div class="col-6 p-1 d-flex">
 						<div>
 							<h1>{{user.pseudo}}</h1>
