--- a/views/template/user/updateProfil.html.twig
+++ b/views/template/user/updateProfil.html.twig
@@ -18,11 +18,11 @@
 						<input type="text" class="form-control" id="name" name="name" placeholder="Entrer votre prénom" value="{{user.name}}">
 					</div>
 					<div>
-						<label for="firstName">Nom</label>
+						<label class="my-3" for="firstName">Nom</label>
 						<input type="text" class="form-control" id="firstName" name="firstName" placeholder="Entrer votre nom" value="{{user.firstName}}">
 					</div>
 					<div>
-						<label for="firstName">Pseudo</label>
+						<label class="my-3" for="firstName">Pseudo</label>
 						<input type="text" class="form-control" id="pseudo" name="pseudo" placeholder="Entrer votre pseudo" value="{{user.pseudo}}">
 					</div>
 					<div>
@@ -30,11 +30,11 @@
 					<input type="file" class="form-control" id="image" name="image">
 				</div>
 					<div>
-						<label for="firstName">Ancien mot de passe</label>
+						<label class="my-3" for="firstName">Ancien mot de passe</label>
 						<input type="password" class="form-control" id="oldPassword" name="oldPassword" placeholder="Entrer votre ancien mot de passe" value="">
 					</div>
 					<div>
-						<label for="firstName">Nouveaux mot de passe</label>
+						<label class="my-3" for="firstName">Nouveaux mot de passe</label>
 						<input type="password" class="form-control" id="password" name="password" placeholder="Entrer votre mot de passe" value="">
 					</div>
 					<button type="submit" class="btn btn-primary mt-2">modifier</button>
