--- a/views/template/admin/listUsers.html.twig
+++ b/views/template/admin/listUsers.html.twig
@@ -2,7 +2,7 @@
 {% block main %}
 	<main>
 		{% for user in users %}
-			<article class="row col-6 mx-auto card-body border border-muted bg-light rounded m-2">
+			<article class="row col-12 col-md-6 col-lg-6 mx-auto card-body border border-muted bg-light rounded m-2">
 				<div class="d-flex justify-content-start">
 					<img class="col-2 me-2 p-1 rounded-circle" src="./images/userImages/{{user.id}}/{{user.picture}}" class="card-img-top" alt="photo_de_profil"/>
 					<div>
