--- a/views/template/authentification/login.html.twig
+++ b/views/template/authentification/login.html.twig
@@ -3,7 +3,7 @@
 	<main style="background: url('./pictures/bg.png');background-size: cover; background-repeat: no-repeat;">
 		<h1 class="text-center my-5">Hey, ravis de te revoir!</h1>
 		<!--_id === -->
-		<form class="col-md-6 p-3 mx-auto my-5 bg-light rounded" method="post" action="connexion">
+		<form class="col-12 col-md-6 col-lg-6 p-3 mx-auto my-5 bg-light rounded" method="post" action="connexion">
 			<h1 class="text-primary">Connexion</h1>
 			<hr class="m-0">
 			{% for err in errors %}
