--- a/views/template/event/listEvent.html.twig
+++ b/views/template/event/listEvent.html.twig
@@ -9,38 +9,41 @@
 					<article class="row card-body border border-muted rounded m-2">
 						<div class="col-6 d-flex flex-column justify-content-between">
 							<div class=" d-flex  align-items-center">
-								<img class="col-2 me-2" src="./pictures/logo-weride.png" alt="profil image">
+								{% if not userEvent.picture %}
+									<img class="col-2 p-1 rounded-circle" src="../pictures/default.jpg" class="card-img-top"/>
+								{% else %}
+									<img class="col-2 p-1 rounded-circle" src="./images/userImages/{{userEvent.id}}/{{userEvent.picture}}" class="card-img-top"/>
+								{% endif %}
 								<div>
-
-									<h6 class="card-title">{{userEvent.name}}
-										{{userEvent.pseudo}}</h5>
+									<h6 class="card-title">{{userEvent.name}} {{userEvent.pseudo}}</h5>
 									<p class="card-subtitle mb-2 text-muted">{{userEvent.motoUser[0].brand}} {{userEvent.motoUser[0].model}} {{userEvent.motoUser[0].cylinder}}</p>
-
 								</div>
 							</div>
 							<h5 class="card-text">{{event.title}}</h5>
-							<p class="text-success m-0">Rider {{event.riderJoin.length}}+</p>
+							<p class="text-success m-0">Rider
+								{{event.riderJoin.length}}+</p>
 						</div>
 						<div class="col-6">
 							<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1456402.9825108857!2d3.921280050206282!3d44.524634635339055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x12c9bf4344da5333%3A0x40819a5fd970220!2sMarseille!3m2!1d43.296482!2d5.3697799999999996!4m5!1s0x47f4ea516ae88797%3A0x408ab2ae4bb21f0!2sLyon!3m2!1d45.764043!2d4.835659!5e0!3m2!1sfr!2sfr!4v1647353202440!5m2!1sfr!2sfr" width="100%" height="" style="border-radius:5;" allowfullscreen="" loading="lazy"></iframe>
 							<div class="d-flex justify-content-between">
-							{% set iParticipate = false %}
+								{% set iParticipate = false %}
 								{% for idRider in event.riderJoin %}
 									{% if idRider == user._id %}
 										{% set iParticipate = true %}
 									{% endif %}
 								{% endfor %}
-							{% if event._id == user._id %}
-							<p class="text-danger">{{userEvent._id}} </p>
+								{% if event._id == user._id %}
+									<p class="text-danger">{{userEvent._id}}
+									</p>
 									<p>{{user._id}}</p>
-							{% endif %}
-									{% if event.riderJoin.length == 0 %}
-										<a href="/rejoindreEvenement/{{event._id}}/{{userEvent._id}}/{{user._id}}" class="btn btn-primary">Je participe</a>
-									{% elseif iParticipate %}
-										<a href="/annulerParticipation/{{event._id}}/{{userEvent._id}}/{{user._id}}" class="btn btn-danger">Annuler la partipation</a>
-									{% else %}
-										<a href="/rejoindreEvenement/{{event._id}}/{{userEvent._id}}/{{user._id}}" class="btn btn-primary">Je participe</a>
-									{% endif %}
+								{% endif %}
+								{% if event.riderJoin.length == 0 %}
+									<a href="/rejoindreEvenement/{{event._id}}/{{userEvent._id}}/{{user._id}}" class="btn btn-primary">Je participe</a>
+								{% elseif iParticipate %}
+									<a href="/annulerParticipation/{{event._id}}/{{userEvent._id}}/{{user._id}}" class="btn btn-danger">Annuler la partipation</a>
+								{% else %}
+									<a href="/rejoindreEvenement/{{event._id}}/{{userEvent._id}}/{{user._id}}" class="btn btn-primary">Je participe</a>
+								{% endif %}
 								<a href="/evenement/{{event._id}}/{{userEvent._id}}" class="btn btn-light">En savoir plus</a>
 							</div>
 						</div>
