--- a/views/template/layout/_header.html.twig
+++ b/views/template/layout/_header.html.twig
@@ -20,7 +20,11 @@
 				<img class="col-3 px-3" src="http://localhost:8080/pictures/logo-weride.png" alt="logo_weride">
 			</a>
 				<div class="col-12 col-md-6 col-lg-6 d-flex justify-content-around align-items-center header">
-				<img class="col-2 p-1 rounded-circle" src="./images/userImages/{{user.id}}/{{user.picture}}" class="card-img-top"/>
+				{% if not user.picture %} 
+					<img class="col-2 p-1 rounded-circle" src="../pictures/default.jpg" class="card-img-top"/>
+				{% else %}
+					<img class="col-2 p-1 rounded-circle" src="./images/userImages/{{user.id}}/{{user.picture}}" class="card-img-top"/>
+				{% endif %}
 					<div class="col-6 p-1 d-flex">
 						<div>
 							<h1>{{user.pseudo}}</h1>
