--- a/views/template/user/profil.html.twig
+++ b/views/template/user/profil.html.twig
@@ -10,7 +10,7 @@
 
 		{# section profil #}
 		<section class="card col-12 col-md-6 col-lg-6 mt-3 container p-0 d-flex align-items-center">
-			{% if not user.picture %}
+			{% if not inspectedUser.picture %}
 				<img class="col-2 p-1 rounded-circle" src="../pictures/default.jpg" class="card-img-top"/>
 			{% else %}
 				<img class="col-2 p-1 rounded-circle" src="/images/userImages/{{inspectedUser.id}}/{{inspectedUser.picture}}" class="card-img-top"/>
@@ -127,9 +127,9 @@
 						<span class="text-danger">(en construction)<span></h2>
 							<hr class="m-0">
 							<article class="row ">
-								<img class="col-4 " src="./pictures/motard.jpg" alt="image de moto">
-								<img class="col-4 " src="./pictures/motard.jpg" alt="image de moto">
-								<img class="col-4 " src="./pictures/motard.jpg" alt="image de moto">
+								<img class="col-4 " src="/pictures/motard.jpg" alt="image de moto">
+								<img class="col-4 " src="/pictures/motard.jpg" alt="image de moto">
+								<img class="col-4 " src="/pictures/motard.jpg" alt="image de moto">
 							</article>
 						</section>
 					</main>
