--- a/views/template/event/event.html.twig
+++ b/views/template/event/event.html.twig
@@ -8,7 +8,7 @@
 
 			<div class=" d-flex mb-3 align-items-center">
 				{% if not userEvent.picture %}
-					<img class="col-2 p-1 rounded-circle" src="/pictures/default.jpg" class="card-img-top"/>
+					<img class="col-2 p-1 rounded-circle" src="../pictures/default.jpg" class="card-img-top"/>
 				{% else %}
 					<img class="col-2 p-1 rounded-circle" src="/images/userImages/{{userEvent.id}}/{{userEvent.picture}}" class="card-img-top"/>
 				{% endif %}
