--- a/views/template/layout/_header.html.twig
+++ b/views/template/layout/_header.html.twig
@@ -21,7 +21,7 @@
 			</a>
 				<div class="col-12 col-md-6 col-lg-6 d-flex justify-content-around align-items-center header">
 				{% if not user.picture %} 
-					<img class="col-2 p-1 rounded-circle" src="../pictures/default.jpg" class="card-img-top"/>
+					<img class="col-2 p-1 rounded-circle" src="/pictures/default.jpg" class="card-img-top"/>
 				{% else %}
 					<img class="col-2 p-1 rounded-circle" src="/images/userImages/{{user.id}}/{{user.picture}}" class="card-img-top"/>
 				{% endif %}
