--- a/views/template/user/profil.html.twig
+++ b/views/template/user/profil.html.twig
@@ -63,7 +63,9 @@
 									{{user.motoUser[0].cylinder}}</p>
 							</div>
 						</div>
-						<h5 class="card-text">{{event.title}}</h5>
+							<h5 style="color:#2b3658;" class=" m-0">{{event.departureLocation}}</h5>
+							<h5 style="color:#2b3658;" class=" m-0">{{event.backLocation}}</h5>
+							<p class="m-0 text-secondary">&#x1F552; Du {{event.startDate}} au {{event.endDate}}</p>
 						<p class="text-success m-0">Rider
 							{{event.riderJoin.length}}+</p>
 					</div>
@@ -97,7 +99,9 @@
 										{{object.userEvent.motoUser[0].cylinder}}</p>
 								</div>
 							</div>
-							<h5 class="card-text">{{event.title}}</h5>
+							<h5 style="color:#2b3658;" class=" ">{{event.departureLocation}}</h5>
+							<h5 style="color:#2b3658;" class=" ">{{event.backLocation}}</h5>
+							<p class=" text-secondary">&#x1F552; Du {{event.startDate}} au {{event.endDate}}</p>
 							<p class="text-success m-0">Rider
 								{{event.riderJoin.length}}+</p>
 						</div>
