--- a/views/template/authentification/login.html.twig
+++ b/views/template/authentification/login.html.twig
@@ -7,7 +7,7 @@
 			<h1 class="text-primary">Connexion</h1>
 			<hr class="m-0">
 			{% for err in errors %}
-				<p class="text-danger">{{err}}</p>
+				<p class="text-danger my-1">{{err}}</p>
 			{% endfor %}
 			<div>
 				<label class="my-3" for="name">Pseudo</label>
