--- a/views/template/authentification/registration.html.twig
+++ b/views/template/authentification/registration.html.twig
@@ -7,12 +7,12 @@
 			<hr class="m-0">
 				
 				<div>
-					<label class="my-3" for="name">Prénom</label>
+					<label class="my-3" for="name">Nom</label>
 					<input type="text" class="form-control" id="name" name="name" placeholder="Entrer votre prénom" value="{{user.name}}">
 						<p class="text-danger">{{errors.name}}</p>
 				</div>
 				<div>
-					<label class="my-3" for="firstName">Nom</label>
+					<label class="my-3" for="firstName">Prénom</label>
 					<input type="text" class="form-control" id="firstName" name="firstName" placeholder="Entrer votre nom" value="{{user.firstName}}">
 					<p class="text-danger">{{errors.firstName}}</p>
 				</div>
