--- a/views/template/event/newEvent.html.twig
+++ b/views/template/event/newEvent.html.twig
@@ -8,55 +8,60 @@
 				<form class="col-md-6 mx-auto p-3 my-5 bg-light rounded" method="post" action="nouvelleEvenement">
 					<h3 class="text-primary">Organises une sortie</h1>
 					<hr class="m-0">
-					{% for err in errors %}
-						<p class="text-danger">{{err}}</p>
-					{% endfor %}
-
+				
 					<div class="mt-2">
 						<label for="startDate">Date de départ</label>
-						<input type="date" class="form-control" id="startDate" name="startDate" placeholder="" value="">
+						<input type="date" class="form-control" id="startDate" name="startDate" placeholder="" value="{{event.startDate}}">
+						<p class="text-danger">{{errors.startDate}}</p>
 					</div>
 					<div class="mt-2">
 						<label for="hour">Heure de départ</label>
-						<input type="time" class="form-control" id="hour" name="hour" placeholder="" value="">
+						<input type="time" class="form-control" id="hour" name="hour" placeholder="" value="{{event.hour}}">
+						<p class="text-danger">{{errors.hour}}</p>
 					</div>
 					<div class="mt-2">
 						<label for="endDAte">Date de retour</label>
-						<input type="date" class="form-control" id="endDate" name="endDate" placeholder="" value="">
+						<input type="date" class="form-control" id="endDate" name="endDate" placeholder="" value="{{event.endDate}}">
+						<p class="text-danger">{{errors.endDate}}</p>
 					</div>
 					<div class="mt-2">
 						<label for="departureLocation">Lieu de départ</label>
-						<input type="text" class="form-control" id="departureLocation" name="departureLocation" placeholder="" value="">
+						<input type="text" class="form-control" id="departureLocation" name="departureLocation" placeholder="Votre départ" value="{{event.departureLocation}}">
+						<p class="text-danger">{{errors.departureLocation}}</p>
 					</div>
 					<div class="mt-2">
 						<label for="backLocation">Lieu de retour</label>
-						<input type="mail" class="form-control" id="backLocation" name="backLocation" placeholder="" value="">
+						<input type="mail" class="form-control" id="backLocation" name="backLocation" placeholder="Votre retour" value="{{event.backLocation}}">
+						<p class="text-danger">{{errors.backLocation}}</p>
 					</div>
 					<div class="mt-2">
 						<label for="step">Etape</label>
-						<input type="text" class="form-control" id="step" name="step" placeholder="" value="">
+						<input type="text" class="form-control" id="step" name="step" placeholder="Votre étape" value="{{event.step}}">
+						<p class="text-danger">{{errors.step}}</p>
 					</div>
-					<div class="row mt-2 mb-2">
-						<div>
+					<div class="row mt-2 mb-2 d-flex justify-content-between">
+						<div class="col-4 text-center">
 							<input type="radio" id="pepere" name="type" value="pepere">
-							<label for="pepere">Pépère</label>
+							<label for="pepere"> Pépère</label>
 						</div>
-						<div>
+						<div class="col-4 text-center">
 							<input type="radio" id="normal" name="type" value="normal">
-							<label for="normal">Normal</label>
+							<label for="normal"> Normal</label>
 						</div>
-						<div>
+						<div class="col-4 text-center">
 							<input type="radio" id="gaz" name="type" value="gaz">
-							<label for="gaz">GazzZ</label>
+							<label for="gaz"> GazZ</label>
 						</div>
 					</div>
 					<div class="mt-2">
 						<label for="title">Titre</label>
-						<input type="text" class="form-control" id="title" name="title" placeholder="" value="">
+						<input type="text" class="form-control" id="title" name="title" placeholder="Votre titre" value="{{event.title}}">
+							<p class="text-danger">{{errors.title}}</p>
 					</div>
 					<div class="mt-2">
 						<label for="description">Description</label>
-						<input type="textera" class="form-control" id="description" name="description" placeholder="" value="">
+						<textarea type="textera" rows="5" cols="8" class="form-control" id="description" name="description" placeholder="Votre description" value="{{event.description}}"></textarea>
+							<p class="text-danger">{{errors.description}}</p>
 					</div>
 					<button type="submit" class="btn btn-primary mt-2">Valider</button>
 				</form>
