--- a/views/template/user/updateProfil.html.twig
+++ b/views/template/user/updateProfil.html.twig
@@ -9,21 +9,20 @@
 				<form class="col-md-6 mx-auto p-3 my-5 bg-light rounded" enctype="multipart/form-data" method="post" action="modifierProfil">
 					<h1 class="text-primary">Modifier le Profil</h1>
 					<hr class="m-0">
-					{% for err in errors %}
-						<p class="text-danger">{{err}}</p>
-					{% endfor %}
-
 					<div>
 						<label class="my-3" for="name">Prénom</label>
 						<input type="text" class="form-control" id="name" name="name" placeholder="Entrer votre prénom" value="{{user.name}}">
+						<p class="text-danger">{{errors.firstName}}</p>
 					</div>
 					<div>
 						<label class="my-3" for="firstName">Nom</label>
 						<input type="text" class="form-control" id="firstName" name="firstName" placeholder="Entrer votre nom" value="{{user.firstName}}">
+						<p class="text-danger">{{errors.name}}</p>
 					</div>
 					<div>
 						<label class="my-3" for="firstName">Pseudo</label>
 						<input type="text" class="form-control" id="pseudo" name="pseudo" placeholder="Entrer votre pseudo" value="{{user.pseudo}}">
+						<p class="text-danger">{{errors.pseudo}}</p>
 					</div>
 					<div>
 					<label class="my-3" for="image">Photo</label>
@@ -32,6 +31,9 @@
 					<div>
 						<label class="my-3" for="firstName">Ancien mot de passe</label>
 						<input type="password" class="form-control" id="oldPassword" name="oldPassword" placeholder="Entrer votre ancien mot de passe" value="">
+						{% for err in errors %}
+						<p class="text-danger my-1">{{err}}</p>
+					{% endfor %}
 					</div>
 					<div>
 						<label class="my-3" for="firstName">Nouveaux mot de passe</label>
