--- a/views/template/user/profil.html.twig
+++ b/views/template/user/profil.html.twig
@@ -80,7 +80,7 @@
 		</section>
 
 		{# section je participe #}
-		<section class="card col-12 col-md-6 col-lg-6 mt-3 bg-light container p-0">
+		<section class="card col-12 col-md-6 col-lg-6 mt-3 bg-light container p-0" id="{{event._id}}">
 			<h2 class="card-title m-0 p-1">Je participe</h2>
 			<hr class="m-0">
 			{% if inspectedUser.eventUser.length == 0 %}
@@ -88,7 +88,7 @@
 			{% endif %}
 			{% for object in eventJoined %}
 				{% for event in object.eventUser %}
-					<article class="row card-body d-flex justify-content-end border border-muted rounded m-2">
+					<article class="row card-body d-flex justify-content-end border border-muted rounded m-2" >
 						<div class="col-6 d-flex flex-column justify-content-between">
 							<div class=" d-flex  align-items-center">
 								<img class="col-2 p-1 rounded-circle" src="./images/userImages/{{object.userEvent.id}}/{{object.userEvent.picture}}" class="card-img-top"/>
