--- a/views/template/user/profil.html.twig
+++ b/views/template/user/profil.html.twig
@@ -5,7 +5,8 @@
 		{% set inspectedUser = user %}
 	{% endif %}
 
-	<main class="">
+	<main
+		class="">
 		{# section profil #}
 		<section class="card col-12 col-md-6 col-lg-6 mt-3 container p-0 d-flex align-items-center">
 			{% if not inspectedUser.picture %}
@@ -30,7 +31,8 @@
 			</div>
 			<hr class="m-0">
 			{% if inspectedUser.motoUser.length == 0 %}
-				<p class="mx-auto my-2 text-danger"> Hey l'ami, tu n'as pas de bécane !</p>
+				<p class="mx-auto my-2 text-danger">
+					Hey l'ami, tu n'as pas de bécane !</p>
 			{% endif %}
 			{% for moto in inspectedUser.motoUser %}
 				<article class="row card-body text-center border border-muted rounded m-2">
@@ -49,7 +51,8 @@
 			<h2 class="card-title m-0 p-1">Mes sorties</h2>
 			<hr class="m-0">
 			{% if inspectedUser.eventUser.length == 0 %}
-				<p class="mx-auto my-2 text-danger"> Hey l'ami, tu n'as aucune sortie organisée !</p>
+				<p class="mx-auto my-2 text-danger">
+					Hey l'ami, tu n'as aucune sortie organisée !</p>
 			{% endif %}
 			{% for event in inspectedUser.eventUser %}
 				<article class="row card-body d-flex justify-content-end border border-muted rounded m-2">
@@ -63,18 +66,23 @@
 									{{user.motoUser[0].cylinder}}</p>
 							</div>
 						</div>
-							<h5 style="color:#2b3658;" class=" m-0">{{event.departureLocation}}</h5>
-							<h5 style="color:#2b3658;" class=" m-0">{{event.backLocation}}</h5>
-							<p class="m-0 text-secondary">&#x1F552; Du {{event.startDate}} au {{event.endDate}}</p>
+						<h5 style="color:#2b3658;" class=" m-0">{{event.departureLocation}}</h5>
+						<h5 style="color:#2b3658;" class=" m-0">{{event.backLocation}}</h5>
+						<p class="m-0 text-secondary">&#x1F552; Du
+							{{event.startDate}}
+							au
+							{{event.endDate}}</p>
 						<p class="text-success m-0">Rider
 							{{event.riderJoin.length}}+</p>
 					</div>
 					<div class="col-6">
 						<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1456402.9825108857!2d3.921280050206282!3d44.524634635339055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x12c9bf4344da5333%3A0x40819a5fd970220!2sMarseille!3m2!1d43.296482!2d5.3697799999999996!4m5!1s0x47f4ea516ae88797%3A0x408ab2ae4bb21f0!2sLyon!3m2!1d45.764043!2d4.835659!5e0!3m2!1sfr!2sfr!4v1647353202440!5m2!1sfr!2sfr" width="100%" height="" style="border-radius:5;" allowfullscreen="" loading="lazy"></iframe>
+						<div class="d-flex justify-content-end">
+							<a href="/evenement/{{event._id}}/{{inspectedUser._id}}" class="btn btn-light text-primary col-4">En savoir plus</a>
+						</div>
 					</div>
 
-					<a href="/evenement/{{event._id}}/{{inspectedUser._id}}" class="btn btn-light text-primary col-4">En savoir plus</a>
-
+				
 				</article>
 			{% endfor %}
 		</section>
@@ -84,11 +92,12 @@
 			<h2 class="card-title m-0 p-1">Je participe</h2>
 			<hr class="m-0">
 			{% if inspectedUser.eventUser.length == 0 %}
-				<p class="mx-auto my-2 text-danger"> Hey l'ami, tu ne participes à aucune sortie !</p>
+				<p class="mx-auto my-2 text-danger">
+					Hey l'ami, tu ne participes à aucune sortie !</p>
 			{% endif %}
 			{% for object in eventJoined %}
 				{% for event in object.eventUser %}
-					<article class="row card-body d-flex justify-content-end border border-muted rounded m-2" >
+					<article class="row card-body d-flex justify-content-end border border-muted rounded m-2">
 						<div class="col-6 d-flex flex-column justify-content-between">
 							<div class=" d-flex  align-items-center">
 								<img class="col-2 p-1 rounded-circle" src="./images/userImages/{{object.userEvent.id}}/{{object.userEvent.picture}}" class="card-img-top"/>
@@ -101,34 +110,36 @@
 							</div>
 							<h5 style="color:#2b3658;" class=" ">{{event.departureLocation}}</h5>
 							<h5 style="color:#2b3658;" class=" ">{{event.backLocation}}</h5>
-							<p class=" text-secondary">&#x1F552; Du {{event.startDate}} au {{event.endDate}}</p>
+							<p class=" text-secondary">&#x1F552; Du
+								{{event.startDate}}
+								au
+								{{event.endDate}}</p>
 							<p class="text-success m-0">Rider
 								{{event.riderJoin.length}}+</p>
 						</div>
 						<div class="col-6">
 							<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1456402.9825108857!2d3.921280050206282!3d44.524634635339055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x12c9bf4344da5333%3A0x40819a5fd970220!2sMarseille!3m2!1d43.296482!2d5.3697799999999996!4m5!1s0x47f4ea516ae88797%3A0x408ab2ae4bb21f0!2sLyon!3m2!1d45.764043!2d4.835659!5e0!3m2!1sfr!2sfr!4v1647353202440!5m2!1sfr!2sfr" width="100%" height="" style="border-radius:5;" allowfullscreen="" loading="lazy"></iframe>
+
+							{# Verifie si l'utilisateur participe à la sortie ou non #}
+							{% set iParticipate = false %}
+							{% for idRider in event.riderJoin %}
+								{% if idRider == user._id %}
+									{% set iParticipate = true %}
+								{% endif %}
+							{% endfor %}
+
+							<div class="d-flex justify-content-between align-items-center">
+								{% if event.riderJoin.length == 0 %}
+									<a href="/rejoindreEvenement/{{event._id}}/{{object.userEvent.id}}/{{user._id}}" class="btn btn-primary">Je participe</a>
+								{% elseif iParticipate %}
+									<a href="/annulerParticipation/{{event._id}}/{{object.userEvent.id}}/{{user._id}}" class="btn btn-danger">Annuler la partipation</a>
+								{% else %}
+									<a href="/rejoindreEvenement/{{event._id}}/{{object.userEvent.id}}/{{user._id}}" class="btn btn-primary">Je participe</a>
+								{% endif %}
+								<a href="/evenement/{{event.id}}/{{object.userEvent.id}}" class="btn btn-light text-primary col-4">En savoir plus</a>
+							</div>
 						</div>
 
-									{# Verifie si l'utilisateur participe à la sortie ou non #}
-			{% set iParticipate = false %}
-			{% for idRider in event.riderJoin %}
-				{% if idRider == user._id %}
-					{% set iParticipate = true %}
-				{% endif %}
-			{% endfor %}
-
-				<div class="d-flex justify-content-between">
-				{% if event.riderJoin.length == 0 %}
-				<a href="/rejoindreEvenement/{{event._id}}/{{object.userEvent.id}}/{{user._id}}" class="btn btn-primary">Je participe</a>
-			{% elseif iParticipate %}
-				<a href="/annulerParticipation/{{event._id}}/{{object.userEvent.id}}/{{user._id}}" class="btn btn-danger">Annuler la partipation</a>
-			{% else %}
-				<a href="/rejoindreEvenement/{{event._id}}/{{object.userEvent.id}}/{{user._id}}" class="btn btn-primary">Je participe</a>
-			{% endif %}
-
-						<a href="/evenement/{{event.id}}/{{object.userEvent.id}}" class="btn btn-light text-primary col-4">En savoir plus</a>
-				</div>
-			
 
 					</article>
 				{% endfor %}
@@ -149,4 +160,3 @@
 
 			</main>
 		{% endblock %}
-
