--- a/views/template/event/event.html.twig
+++ b/views/template/event/event.html.twig
@@ -22,7 +22,7 @@
 			</div>
 			<div class="d-flex justify-content-between">
 				<p class="card-text text-success my-1">Date de départ</p>
-				<p class="card-text text-secondary my-1">{{event.startDate}}</p>
+				<p class="card-text text-secondary my-1">{{event.startDate|date("d/m/Y")}}</p> <!-- pour configurer le format de la date -->
 			</div>
 			<div class="d-flex justify-content-between">
 				<p class="card-text text-success my-1">Heure de départ</p>
@@ -31,6 +31,10 @@
 			<div class="d-flex justify-content-between">
 				<p class="card-text text-success my-1">Lieu de départ</p>
 				<p class="card-text text-secondary my-1">{{event.departureLocation}}</p>
+			</div>
+			<div class="d-flex justify-content-between">
+				<p class="card-text text-success my-1">Date de retour</p>
+				<p class="card-text text-secondary my-1">{{event.endDate|date("d/m/Y")}}</p>
 			</div>
 			<div class="d-flex justify-content-between">
 				<p class="card-text text-success my-1">Lieu de retour</p>
